feat: add interfaces for skills and social media responses; implement new UI components for input, textarea, and slider

--- a/src/translations/en/default.json
+++ b/src/translations/en/default.json
@@ -21,10 +21,24 @@
   "DEVELOPER_TEXT": "Developer",
   "HOME_PAGE_DESCRIPTION": "And welcome to my portfolio",
   "DOWNLOAD_CV": "Download CV",
-  "MY_PROJECTS_TEXT": "My Projects",
+  "MY_PROJECTS_TEXT": "My Personal Projects",
   "MY_PROJECTS_DESCRIPTION": "Here you can enjoy some of my projects",
   "LUIRED_DESCRIPTION": "This is a product sales app, where we apply firebase and the firebase auth with google for the start of user session, the shopping cart, favorites section and others are applied.",
   "USER_FLOW_DESCRIPTION": "This is an application where a CRUD for users was applied, the auth of firebase was applied with mail and password, the user registration, the forgetfulness of the password, and we handle action permissions for the role of the user.",
   "TESLO_SHOP_DESCRIPTION": "This is an e-commerce application where you can add products to shopping carts, view favorites, start session, and more.",
-  "CLIMA_SENSE_DESCRIPTION": "This is a climatic application where the openweather api was used, a dark mode and a carousel were applied to show the expected climates."
+  "CLIMA_SENSE_DESCRIPTION": "This is a climatic application where the openweather api was used, a dark mode and a carousel were applied to show the expected climates.",
+  "BARBER_SHOP_DESCRIPTION": "This application was made for a barber shop for customer-side appointment management.",
+  "TASK_APP_DESCRIPTION": "This app was created for task management and user consumption through an api, use my own liberia ui created by my Aura-Kit call and also use a Hjarquin-cross cross to share functions and logic and reuse it in any project.",
+  "AURA_KIT_DESCRIPTION": "This library was created to facilitate the creation of my own components based on the Material UI library, it was created with the storybook for the presentation.",
+  "HJARQUIN_CROSS_DESCRIPTION": "This library was created for the reuse of logic in several projects. Its main function is that it is available in React, Next.js and React-native.",
+  "ABOUT_ME_TEXT_TITLE": "Hi there! I'm Hazley, a 21-year-old web and mobile developer passionate about building scalable and dynamic applications. I specialize in React, React Native, and Next.js, with experience in tools like Firebase, Axios, React Query, Formik, React Hook Form, and GetStream.",
+  "ABOUT_ME_TEXT_DESCRIPTION": "I love crafting intuitive user interfaces and delivering high-quality solutions. Let’s connect and create something amazing together!",
+  "SKILLS_TEXT": "Skills",
+  "AND_MORE_TEXT": "And more...",
+  "CONTACT_TITLE_TEXT": "Contact me",
+  "SUBJECT_TEXT": "Subject",
+  "MESSAGE_TEXT": "Message",
+  "SEND_BUTTON_TEXT": "Send",
+  "GO_HOME_TEXT": "Go Home",
+  "NOT_FOUND_PAGE_TEXT": "Sorry, We couldn't find what you are looking for!"
 }
