--- a/src/translations/es/default.json
+++ b/src/translations/es/default.json
@@ -21,10 +21,24 @@
   "DEVELOPER_TEXT": "Web",
   "HOME_PAGE_DESCRIPTION": "Y bienvenido a mi portafolio",
   "DOWNLOAD_CV": "Descargar CV",
-  "MY_PROJECTS_TEXT": "Mis Proyectos",
+  "MY_PROJECTS_TEXT": "Mis Proyectos Personales",
   "MY_PROJECTS_DESCRIPTION": "Aquí puedes disfrutar de algunos de mis proyectos",
   "LUIRED_DESCRIPTION": "Esta es una aplicación de venta de productos, donde aplicamos firebase y la auth firebase con google para el inicio de la sesión de usuario, el carrito de compras, la sección de favoritos y más",
   "USER_FLOW_DESCRIPTION": "Esta es una aplicación donde se aplicó un CRUD para usuarios, se aplicó el auth de firebase con correo y contraseña, el registro de usuario, el olvido de la contraseña, y manejamos permisos de acción para el rol del usuario.",
   "TESLO_SHOP_DESCRIPTION": "Esta es una aplicación e-commerce donde puede agregar productos a carritos de compras, ver favoritos, iniciar sesión y más.",
-  "CLIMA_SENSE_DESCRIPTION": "Esta es una aplicación climática donde se utilizó el api de clima abierto, se aplicó un modo oscuro y un carrusel para mostrar los climas esperados."
+  "CLIMA_SENSE_DESCRIPTION": "Esta es una aplicación climática donde se utilizó el api de clima abierto, se aplicó un modo oscuro y un carrusel para mostrar los climas esperados.",
+  "BARBER_SHOP_DESCRIPTION": "Esta aplicación fue hecha para una barbería para la gestión de citas del lado del cliente.",
+  "TASK_APP_DESCRIPTION": "Esta aplicación fue creada para la gestión de tareas y el consumo de usuarios a través de una api, utiliza mi propia librería ui creada por mi Aura-Kit y también utiliza un Hjarquin-cross cross para compartir funciones y lógica y reutilizarlo en cualquier proyecto.",
+  "AURA_KIT_DESCRIPTION": "Esta librería fue creada para facilitar la creación de mis propios componentes basados en la librería Material UI, fue creada con el storybook para la presentación.",
+  "HJARQUIN_CROSS_DESCRIPTION": "Esta librería fue creada para la reutilización de lógica en varios proyectos. Su función principal es que está disponible en React, Next.js y React-native.",
+  "ABOUT_ME_TEXT_TITLE": "¡Hola! Soy Hazley, un desarrollador web y móvil de 21 años apasionado por crear aplicaciones escalables y dinámicas. Me especializo en React, React Native y Next.js, con experiencia en herramientas como Firebase, Axios, React Query, Formik, React Hook Form y GetStream.",
+  "ABOUT_ME_TEXT_DESCRIPTION": "Me encanta diseñar interfaces intuitivas y ofrecer soluciones de alta calidad. ¡Conectemos y hagamos algo increíble juntos!",
+  "SKILLS_TEXT": "Habilidades",
+  "AND_MORE_TEXT": "Y más...",
+  "CONTACT_TITLE_TEXT": "Contactame",
+  "SUBJECT_TEXT": "Asunto",
+  "MESSAGE_TEXT": "Mensaje",
+  "SEND_BUTTON_TEXT": "Enviar",
+  "GO_HOME_TEXT": "Ir a Inicio",
+  "NOT_FOUND_PAGE_TEXT": "Lo siento, ¡No pudimos encontrar lo que buscas!"
 }
