--- a/src/translations/en/default.json
+++ b/src/translations/en/default.json
@@ -31,6 +31,7 @@
   "TASK_APP_DESCRIPTION": "This app was created for task management and user consumption through an api, use my own liberia ui created by my Aura-Kit call and also use a Hjarquin-cross cross to share functions and logic and reuse it in any project.",
   "AURA_KIT_DESCRIPTION": "This library was created to facilitate the creation of my own components based on the Material UI library, it was created with the storybook for the presentation.",
   "HJARQUIN_CROSS_DESCRIPTION": "This library was created for the reuse of logic in several projects. Its main function is that it is available in React, Next.js and React-native.",
+  "SHOP_CO_DESCRIPTION": "Shop.co is a clothing e-commerce that relies on its shopping cart, favorites, user auth, next.js, shadcn, axios, react-query, firebase, among others, were used.",
   "ABOUT_ME_TEXT_TITLE": "Hi there! I'm Hazley, a 21-year-old web and mobile developer passionate about building scalable and dynamic applications. I specialize in React, React Native, and Next.js, with experience in tools like Firebase, Axios, React Query, Formik, React Hook Form, and GetStream.",
   "ABOUT_ME_TEXT_DESCRIPTION": "I love crafting intuitive user interfaces and delivering high-quality solutions. Let’s connect and create something amazing together!",
   "SKILLS_TEXT": "Skills",
