--- a/src/translations/es/default.json
+++ b/src/translations/es/default.json
@@ -31,6 +31,7 @@
   "TASK_APP_DESCRIPTION": "Esta aplicación fue creada para la gestión de tareas y el consumo de usuarios a través de una api, utiliza mi propia librería ui creada por mi Aura-Kit y también utiliza un Hjarquin-cross cross para compartir funciones y lógica y reutilizarlo en cualquier proyecto.",
   "AURA_KIT_DESCRIPTION": "Esta librería fue creada para facilitar la creación de mis propios componentes basados en la librería Material UI, fue creada con el storybook para la presentación.",
   "HJARQUIN_CROSS_DESCRIPTION": "Esta librería fue creada para la reutilización de lógica en varios proyectos. Su función principal es que está disponible en React, Next.js y React-native.",
+  "SHOP_CO_DESCRIPTION": "Shop.co es un e-commerce de ropa que se basa en su carrito de compras, favoritos, auth de usuario, se usaron next.js, shadcn, axios, react-query, firebase, entre otros.",
   "ABOUT_ME_TEXT_TITLE": "¡Hola! Soy Hazley, un desarrollador web y móvil de 21 años apasionado por crear aplicaciones escalables y dinámicas. Me especializo en React, React Native y Next.js, con experiencia en herramientas como Firebase, Axios, React Query, Formik, React Hook Form y GetStream.",
   "ABOUT_ME_TEXT_DESCRIPTION": "Me encanta diseñar interfaces intuitivas y ofrecer soluciones de alta calidad. ¡Conectemos y hagamos algo increíble juntos!",
   "SKILLS_TEXT": "Habilidades",
