--- a/src/translations/es/default.json
+++ b/src/translations/es/default.json
@@ -36,6 +36,7 @@
   "ABOUT_ME_TEXT_TITLE": "¡Hola! Soy Hazley, un desarrollador web y móvil de 21 años apasionado por crear aplicaciones escalables y dinámicas. Me especializo en React, React Native y Next.js, con experiencia en herramientas como Firebase, Axios, React Query, Formik, React Hook Form y GetStream.",
   "ABOUT_ME_TEXT_DESCRIPTION": "Me encanta diseñar interfaces intuitivas y ofrecer soluciones de alta calidad. ¡Conectemos y hagamos algo increíble juntos!",
   "E_TEACH_DESCRIPTION": "E-Teach es una aplicación innovadora diseñada para maestros y estudiantes, facilitando el proceso de aprendizaje. Los maestros pueden subir materiales, asignar tareas, calificar estudiantes y hacer seguimiento de su progreso de manera sencilla. Los estudiantes pueden entregar tareas, acceder a recursos educativos y mantenerse al día con sus calificaciones. Con E-Teach, la educación se vuelve más organizada y accesible para todos.",
+  "ASSISPRO_DESCRIPTION": "AssisPro es una plataforma inteligente de control de asistencias diseñada para empresas que buscan optimizar la gestión de entradas, salidas, permisos y métricas de productividad de su personal. Con un panel intuitivo, seguimiento en tiempo real y reportes detallados, AssisPro mejora la eficiencia operativa y la toma de decisiones en equipos de todos los tamaños.",
   "SKILLS_TEXT": "Habilidades",
   "AND_MORE_TEXT": "Y más...",
   "CONTACT_TITLE_TEXT": "Contactame",
